[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "chattools-exporter"
version = "0.1.0"
description = "Export chat history (Telegram) to files or Notion with a simple UI"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Proprietary"}
authors = [
  { name = "oregpt" }
]
dependencies = [
  "telethon>=1.34.0",
  "requests>=2.31.0",
  "fastapi>=0.112.0",
  "uvicorn>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/oregpt/chattools-exporter"
Repository = "https://github.com/oregpt/chattools-exporter"

[project.scripts]
chattools-exporter = "chattools_exporter.export_telegram:main"
chattools-exporter-ui = "chattools_exporter.ui_app:main"
chattools-exporter-slack = "chattools_exporter.export_slack:main"
chattools-exporter-discord = "chattools_exporter.export_discord:main"
chattools-exporter-server = "chattools_exporter.server:main"

[tool.hatch.build]
packages = [
  "src/chattools_exporter",
]
